fixing homepage alignment on older browsers

--- a/www/containers/HomePage/HomePage.styl
+++ b/www/containers/HomePage/HomePage.styl
@@ -2,13 +2,13 @@
 
 .HomePage
   padding 0 5%
-
+  display flex
+  flex-direction column
+  justify-content center
+  text-align center
 .Menu
   text-align center
-  position absolute
-  top 50%
-  transform translateY(-50%)
-  width 90%
+  width 100%
 
   &__Link
     text-decoration none
